--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 Django==3.1.3
+elasticsearch==7.10.0
 Flask==1.1.2
 future==0.18.2
 gunicorn==20.0.4
