--- a/logging.ini
+++ b/logging.ini
@@ -25,7 +25,7 @@ args=(os.getenv('LOG_PATH')+'/logging.log', 'a')
 
 [handler_consoleHandler]
 class=StreamHandler
-level=DEBUG
+level=INFO
 formatter=simpleFormatter
 args=(sys.stdout, )
 
